<resources>
	<string name="app_name">AndroidChatter</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="sign_in">Sign in</string>
	<string name="swipe_left_to_register">Swipe left to register</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="e_mail">E-mail</string>
	<string name="register">Register</string>
	<string name="swipe_right_to_sign_in">Swipe right to sign in.</string>
	<string name="passwords_not_matching">The passwords don\'t match</string>
	<string name="failed_to_create_user">Failed to create user</string>
	<string name="settings">Settings</string>
	<string name="sign_out">Sign Out</string>
	<string name="field_must_be_filled">This field must be filled.</string>
	<string name="requests">Requests</string>
	<string name="chats">Chats</string>
	<string name="search">Search</string>
	<string name="change_password">Change password</string>
	<string name="current_password">Current password</string>
	<string name="new_password">New password</string>
	<string name="change_e_mail_address">Change E-mail address</string>
	<string name="change_username">Change username</string>
	<string name="username_taken">Username already taken!</string>
	<string name="confirm_action">Confirm your action</string>
	<string name="confirm_request_send_text">Are your sure you want to send a request to %1$s?</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="self_request_error">You can not send a request to yourself.</string>
	<string name="request_sent">Request sent</string>
	<string name="failed_to_send_request">Failed to send request</string>
	<string name="no_requests_sent">There are no pending requests sent by you.</string>
	<string name="request_canceled">Request canceled</string>
	<string name="no_users">There are no users to display.</string>
	<string name="already_sent_request">You\'ve already sent a request to %1$s</string>
	<string name="already_received_request">%1$s has already sent you a request</string>
	<string name="name_change_successful">Username changed successfully</string>
	<string name="no_incoming_requests">You have no incoming requests.</string>
	<string name="request_accepted">Request accepted</string>
	<string name="request_rejected">Request rejected</string>
	<string name="message">Message</string>
	<string name="no_chats">You have no chats yet.</string>
	<string name="no_messages">No messages yet.</string>
	<string name="enter_your_message">Enter your message…</string>
	<string name="choose_theme">Choose theme</string>
	<string name="light">Light</string>
	<string name="dark">Dark</string>
	<string name="change_theme">Change theme</string>
	<string name="already_chatting">You are already chatting with %1$s</string>
	<string name="too_short_password">The password needs to be at leas 6 characters long</string>
	<string name="email_taken">The e-mail address is already registered</string>
	<string name="wrong_email_or_password">Wrong e-mail or password!</string>
</resources>
