<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:hint="@string/username"
                android:id="@+id/etUsername"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:id="@+id/etPassword"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:id="@+id/btnRegister"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextInputLayout" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/swipe_right_to_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRegister" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                tools:layout_editor_absoluteX="86dp"
                android:id="@+id/etConfirmPassword"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/e_mail"
                tools:layout_editor_absoluteX="86dp"
                android:id="@+id/etEmail"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

    </android.support.design.widget.TextInputLayout>


</android.support.constraint.ConstraintLayout>