<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">
	
	<data>
		<variable
			name="viewModel"
			type="hu.aut.bme.androidchatter.viewmodels.LoginViewModel" />
	</data>
	
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		
		<android.support.design.widget.TextInputLayout
			android:id="@+id/usernameInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="29dp">
			
			<EditText
				android:id="@+id/etEmail"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:layout_marginEnd="20dp"
				android:hint="@string/e_mail"
				android:inputType="textEmailAddress"
				android:text="@={viewModel.email}" />
		
		</android.support.design.widget.TextInputLayout>
		
		<android.support.design.widget.TextInputLayout
			android:id="@+id/passwordInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout"
			tools:layout_editor_absoluteX="20dp">
			
			<EditText
				android:id="@+id/etPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:layout_marginEnd="20dp"
				android:hint="@string/password"
				android:inputType="textPassword"
				android:text="@={viewModel.password}" />
		
		</android.support.design.widget.TextInputLayout>
		
		<hu.aut.bme.androidchatter.view.LoadingButton
			android:id="@+id/btnLogin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="8dp"
			style="@style/CurvedButtonStyle"
			android:text="@string/sign_in"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
			android:onClick="@{viewModel::loginButtonClicked}"/>
		
		<ProgressBar
			android:id="@+id/loginLoading"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:visibility="gone"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />
		
		<TextView
			android:id="@+id/tvRegister"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="16dp"
			android:text="@string/swipe_left_to_register"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />
	
	</android.support.constraint.ConstraintLayout>
</layout>
